--- a/00-user-homepage.html
+++ b/00-user-homepage.html
@@ -7,7 +7,6 @@
 <title>Bob Furzer | My CASA</title>
 
 	<link rel="stylesheet" href="css/furnace.min.css">
-	<!--<link rel="stylesheet" href="css/lead.css">-->
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -18,51 +17,30 @@
 	      <div class="col-md-9 col-xs-7">
 	        <a class="au-header__brand" href="00-user-homepage.html">
 	          <img class="au-header__brand-image" alt="my CASA" src="img/CASALOGO-white-i.svg">
-	          <!--<div class="au-header__text">
-	            <h1 class="au-header__heading">myCASA</h1>
-	            <div class="au-header__subline">
-	              Service description that could be a little longer
-	            </div>
-	          </div>-->
 	        </a>
 	      </div>
 	      <div class="col-md-3 col-xs-5"><a class="au-btn au-btn--dark" href="signed-out.html">Sign out</a></div>
 	    </div>
 	  </div>
-
 	</header>
-
-			<div class="banner">
-				<div class=container>
-					<div class="row">
-					 <div class="col-md-12">
-				This service is currently in beta, we encourage you to <a href="feedback.html">provide feedback</a>
-			</div>
+	<div class="banner">
+			<div class=container>
+			<div class="row">
+				<div class="col-md-12">This service is currently in beta, we encourage you to <a href="feedback.html">provide feedback</a></div>
 			</div>
 		</div>
 	</div>
-
 <main>
-
-
-
 	<div class="body">
 		<div class="container">
 			<div class="row">
 			<div class="col-md-6">
-			<p class="m-t-0">&nbsp;</p>
 				<h2 class="au-header-heading">Welcome</h2>
-				<div><strong>Bob Furzer</strong><br>ARN:1234567
-			</div>
+				<div><strong>Bob Furzer</strong><br>ARN:1234567</div>
 			<p class="m-t-0">&nbsp;</p>
-			<p class="m-t-0">&nbsp;</p>
+
 			<h3>My Organisation</h3>
 			<a href="01-organisation.html" class="au-direction-link">Bob's Flying School</a>
-
-			<!--<p class="m-t-0">&nbsp;</p>
-			<a class="au-cta-link" href="#">Licences</a>
-			<p class="m-t-0 form-text">View your licences</p>-->
-
 			<p class="m-t-0">&nbsp;</p>
 			<a class="au-cta-link" href="#">Profile details</a>
 			<p class="m-t-0 form-text">Manage your personal information and account settings</p>
@@ -70,10 +48,6 @@
 
 		</div>
 	</div>
-
-
-
-
 </main>
 <footer class="footer">
 		<div class="footer-wrapper">
