--- a/02-course-details.html
+++ b/02-course-details.html
@@ -18,18 +18,11 @@
 	      <div class="col-md-9 col-xs-7">
 	        <a class="au-header__brand" href="00-user-homepage.html">
 	          <img class="au-header__brand-image" alt="my CASA" src="img/CASALOGO-white-i.svg">
-	          <!--<div class="au-header__text">
-	            <h1 class="au-header__heading">myCASA</h1>
-	            <div class="au-header__subline">
-	              Service description that could be a little longer
-	            </div>
-	          </div>-->
-	        </a>
+					</a>
 	      </div>
 	      <div class="col-md-3 col-xs-5"><a class="au-btn au-btn--dark" href="signed-out.html">Sign out</a></div>
 	    </div>
 	  </div>
-
 	</header>
 
 			<div class="banner">
@@ -47,7 +40,6 @@
 				<nav class="au-breadcrumbs" aria-label="breadcrumb">
 			  <ul class="au-link-list au-link-list--inline">
 			    <li><a href="00-user-homepage.html">Home</a></li>
-
 			    <li><a href="01-organisation.html">Bob's Flying School</a></li>
 					<li>Remote Pilot Licence (RePL)</li>
 			  </ul>
@@ -56,28 +48,16 @@
 	</div>
 		</div>
 <main id="main-content">
-	<!--<section class="organisation">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-		<div class="org-logo">
-		</div>
-		<div class="org-title">
-			<h1 class="au-display-xl">Bob's Flying School</h1>
-			<h2 class="au-display-sm m-t-1">ARN: 321 4567</h2> <a class="au-direction-link au-direction-link--left m-t-1" href="00-user-homepage.html">Back to my account</a>
-		</div>
-	</div>
-	</div>
-	</div>
-</section>-->
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12"><br>
-					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
-					<h3>Course Details</h3>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
+					<span>Please complete the Remotely Piloted Aircraft details</span>
+				</div>
+					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
-					<p class="m-t-1">&nbsp;</p>
-					<h3 class="label">RePL Training</h3>
+
+					<h3 class="label m-t-2">RePL Training</h3>
 					 <div class="form-section">
 						 Theory and Operational
 						 <!--<label class="au-control-input">
@@ -103,11 +83,11 @@
 						<input class="au-text-input" name="text-input" id="text-input" type="text">
 					</div>-->
 
-						<p class="m-t-0">&nbsp;</p>
-							<h3>Remotely Piloted Aircraft details</h3>
+
+							<h3 class="m-t-4">Remotely Piloted Aircraft details</h3>
 							<div class="form-section">
-								<label for="select1block">Category</label>
-								<select id="select1block" class="au-select au-select--block">
+								<label for="category">Category</label>
+								<select id="category" class="au-select au-select--block">
 									<option value="1">Please select</option>
 									<option value="2">Aeroplane</option>
 									<option value="3">Helicopter</option>
@@ -117,20 +97,20 @@
 								</select>
 							</div>
 							<div class="form-section">
-								<label for="select1block">Weight class</label>
-								<select id="select1block" class="au-select au-select--block">
-									 <option value="1">Please select</option>
+								<label for="weight">Weight class</label>
+								<select id="weight" class="au-select au-select--block">
+									<option value="1">Please select</option>
 									<option value="2">2kg up to 25kg</option>
 									<option value="3">25kg up to 150kg</option>
 									<option value="3">Greater than 150kg</option>
 								</select>
 							</div>
-							<div clas="form-section">
-								<label for="select1block">Type</label>
-								<select id="select1block" class="au-select au-select--block">
+							<div class="form-section">
+								<label for="type">Type</label>
+								<select id="type" class="au-select au-select--block">
 									<option value="1">Please select</option>
-									<option value="2">option</option>
-									<option value="3">option</option>
+									<option value="2">Small</option>
+									<option value="3">Medium</option>
 								</select>
 							</div>
 							<p>&nbsp;</p>
@@ -140,7 +120,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6">
-				<a href="02-student.html" class="au-btn">Next</a>
+				<a href="02-student.html" class="au-btn" id="next">Next</a>
 				<div class="save-exit">
 				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 				Save and exit
@@ -157,5 +137,45 @@
 </footer>
 <script type="text/javascript" src="js/furnace.min.js"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
+<script>
+	$("#error").hide();
+
+	$('#next').click(function(){
+		var c = document.getElementById("category");
+		var cVal = c.options[c.selectedIndex].value;
+		var w = document.getElementById("weight");
+		var wVal = w.options[w.selectedIndex].value;
+		var t = document.getElementById("type");
+		var tVal = t.options[t.selectedIndex].value;
+
+			if(cVal == 1){
+				$("#error").show();
+				$("#category").addClass('form-error');
+				$('#category').on('change', function() {
+  					$("#category").removeClass('form-error');
+				});
+			}
+			if(wVal == 1){
+				$("#error").show();
+				$("#weight").addClass('form-error');
+				$('#weight').on('change', function() {
+  					$("#weight").removeClass('form-error');
+				});
+			}
+			if(tVal == 1){
+				$("#error").show();
+				$("#type").addClass('form-error');
+				$('#type').on('change', function() {
+  					$("#type").removeClass('form-error');
+				});
+			}
+			if (cVal > 1 && wVal > 1 && tVal > 1) {
+				$("#error").hide();
+				return true;
+			}
+			return false;
+	});
+
+</script>
 </body>
 </html>
