--- a/02-student.html
+++ b/02-student.html
@@ -8,7 +8,6 @@
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/furnace.min.css">
-	<!--<link rel="stylesheet" href="css/lead.css">-->
 	<link rel="stylesheet" href="css/main.css">
 </head>
 
@@ -19,15 +18,9 @@
 	      <div class="col-md-9 col-xs-7">
 	        <a class="au-header__brand" href="00-user-homepage.html">
 	          <img class="au-header__brand-image" alt="my CASA" src="img/CASALOGO-white-i.svg">
-	          <!--<div class="au-header__text">
-	            <h1 class="au-header__heading">myCASA</h1>
-	            <div class="au-header__subline">
-	              Service description that could be a little longer
-	            </div>
-	          </div>-->
-	        </a>
-	      </div>
-	      <div class="col-md-3 col-xs-5"><a class="au-btn au-btn--dark" href="signed-out.html">Sign out</a></div>
+					</a>
+	       </div>
+			  <div class="col-md-3 col-xs-5"><a class="au-btn au-btn--dark" href="signed-out.html">Sign out</a></div>
 	    </div>
 	  </div>
 
@@ -57,20 +50,7 @@
 	</div>
 		</div>
 <main id="main-content">
-	<!--<section class="organisation">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-		<div class="org-logo">
-		</div>
-		<div class="org-title">
-			<h1 class="au-display-xl">Bob's Flying School</h1>
-			<h2 class="au-display-sm m-t-1">ARN: 321 4567</h2> <a class="au-direction-link au-direction-link--left m-t-1" href="00-user-homepage.html">Back to my account</a>
-		</div>
-	</div>
-	</div>
-	</div>
-</section>-->
+
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12"><br>
@@ -80,17 +60,11 @@
 				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="error">
 					<h3>Student not found</h3>
 				</div>
-					<h2 class="au-display-xl">Remote Pilot Licence (RePL)</h2>
+				<div role="alert" class="au-body au-page-alerts au-page-alerts--error" id="finalise-error">
+					<h3>Please add a student</h3>
+				</div>
+					<h2 class="au-display-xl m-t-2">Remote Pilot Licence (RePL)</h2>
 					<a class="au-direction-link au-direction-link--left" href="javascript:history.back()">Back</a>
-
-					<!--<div class="form-section">
-						<label for="text-input">Course Number</label>
-						<input class="au-text-input" name="text-input" id="text-input" type="text">
-				  </div>-->
-					<!--<div role="alert" class="au-body au-page-alerts au-page-alerts--warning" id="warning">
-					  <h3>RePL Pilot's 100 points of ID not verified</h3>
-					  <p>.....</p>
-					</div>-->
 
 					<div class="row student-details">
 						<ul class="col-md-12 grid">
@@ -102,77 +76,32 @@
 										<strong>ARN</strong>
 									</div>
 							</li>
-							<li class="hidden">
+							<li class="hidden" id="peter">
 								<div class="student">
 									<span class="student-name">Peter Smith</span>
 								</div>
 								<div class="edit">
 									<span class="student-arn">123 4568</span>
-									<!--<a href="#" class="btn-edit">
-										<span class="fas fa-pencil-alt"></span> Edit
-									</a>-->
 								</div>
 								<div class="delete">
 									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
 									  <span class="fas fa-minus-circle"></span> Delete
 									</a>
 								</div>
-								<!--<div class="edit-student">
-									<div class="col-md-6 col-xs-12">
-										<label for="text-input">Family Name</label>
-										<input class="au-text-input" name="text-input" id="surname-input" type="text" value="Smith">
-									</div>
-									<div class="col-md-6 col-xs-12">
-										<label for="text-input">ARN</label>
-										<input class="au-text-input" name="text-input" id="arn-input" type="number"  value="123654">
-										<span id="arn-error" style="color:#d82c52;"></span>
-									</div>
-									<div class="col-md-6 col-xs-12">
-										<a href="#" class="btn-save-student"><span class="fas fa-save"></span> Save</a>
-									</div>
-									<div class="col-md-6 col-xs-12 pull-right">
-										<a href="#" class="btn-canel-student"> Cancel</a>
-									</div>
-								</div>-->
 							</li>
-							<li class="hidden">
+							<li class="hidden" id="ava">
 								<div class="student">
 									<span class="student-name">Ava Williams</span>
 								</div>
 								<div class="edit">
 									<span class="student-arn">223 4568</span>
-									<!--<a href="#" class="btn-edit">
-										<span class="fas fa-pencil-alt"></span> Edit
-									</a>-->
 								</div>
 								<div class="delete">
-									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot">
+									<a href="#" class="btn-delete"  data-toggle="modal" data-target="#deletePilot-ava">
 									  <span class="fas fa-minus-circle"></span> Delete
 									</a>
 								</div>
 							</li>
-							<!--<li>
-								<div class="student">
-									<span class="student-arn">No students added</span>
-								</div>
-							</li>-->
-							<!--<li>
-								<div class="student">
-									<span class="student-name">Ava Williams</span>
-									<span class="student-arn">ARN 123 4568</span>
-								</div>
-								<div class="edit">
-									<a href="#" class="btn-edit">
-										<span class="fas fa-pencil-alt"></span> Edit
-									</a>
-								</div>
-								<div class="delete">
-									<a href="#" class="btn-delete">
-									  <span class="fas fa-minus-circle"></span> Delete
-									</a>
-								</div>
-							</li>-->
-
 						</ul>
 					</div>
 					<h3>Add Students</h3>
@@ -201,8 +130,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-md-12 m-t-3">
-
-				<a href="03-paymentsummary.html" class="au-btn">Finalise application</a>
+				<a href="03-paymentsummary.html" class="au-btn" id="finalise">Finalise application</a>
 				<div class="save-exit">
 				<a href="01-organisation.html#id-progress" class="au-btn au-btn--secondary">
 				Save and exit
@@ -212,111 +140,6 @@
 		</div>
 	</div>
 
-
-	<!-- Modal add pilot -->
-	<!--<div class="modal fade" id="addPilot" tabindex="-1" role="dialog" aria-labelledby="addPilotDetails" aria-hidden="true">
-	  <div class="modal-dialog modal-dialog-centered" role="document">
-	    <div class="modal-content">
-	      <div class="modal-header">
-	        <h3 class="modal-title" id="addPilotDetails">Add Pilot</h3>
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
-	        </button>
-	      </div>
-	      <div class="modal-body">
-					<form name="repal" method="#">
-						<h3>Pilots Details</h3>
-					<div class="form-section">
-						<label for="text-input">Given Name</label>
-						<input class="au-text-input" name="text-input" id="text-input" type="text">
-				  </div>
-					<div class="form-section">
-						<label for="text-input">Family Name</label>
-						<input class="au-text-input" name="text-input" id="text-input" type="text">
-				  </div>
-					<div class="form-section">
-						<label for="text-input">ARN</label>
-						<input class="au-text-input" name="text-input" id="arn-input" type="text">
-						<span id="arn-error" style="color:#d82c52;"></span>
-				  </div>
-					<div class="form-section">
-						<label class="au-control-input">
-						  <input class="au-control-input__input" type="checkbox" name="checkbox-ex" id="alt-remote">
-						  <span class="au-control-input__text">This Pilot trained on a different remotely piloted aircraft</span>
-						</label>
-					</div>
-						<p>&nbsp;</p>
-						<section id="details">
-						<h3>Remotely Piloted Aircraft details</h3>
-						<div class="form-section">
-							<label for="select1block">Category</label>
-							<select id="select1block" class="au-select au-select--block">
-								<option value="1">Please select</option>
-								<option value="2">Aeroplane</option>
-								<option value="3">Helicopter</option>
-								<option value="4">Multi Rotor</option>
-								<option value="5">Airship</option>
-								<option value="6">Powered Lift</option>
-							</select>
-						</div>
-						<div class="form-section">
-							<label for="select1block">Weight class</label>
-							<select id="select1block" class="au-select au-select--block">
-								<option value="1">Please select</option>
-								<option value="2">2kg up to 25kg</option>
-								<option value="3">25kg up to 150kg</option>
-							</select>
-						</div>
-						<div clas="form-section">
-							<label for="select1block">Make</label>
-							<select id="select1block" class="au-select au-select--block">
-								<option value="1">Please select</option>
-								<option value="2">DJI</option>
-								<option value="3">Parrot</option>
-								<option value="4">3DR</option>
-								<option value="5">EHang</option>
-								<option value="6">Power Vision</option>
-								<option value="7">Syma</option>
-								<option value="8">Walkera</option>
-								<option value="8">Yuneec</option>
-							 <option value="8">Other</option>
-							</select>
-						</div><br>
-						<div class="form-section">
-							<label for="select1block">Model</label>
-							<select id="select1block" class="au-select au-select--block">
-								<option value="1">Please select</option>
-								<option value="2">Inspire 1</option>
-								<option value="3">Inspire 1 Pro/Raw</option>
-								<option value="4">Inspire 2</option>
-								<option value="5">Mavic Air</option>
-								<option value="6">Mavic Pro</option>
-								<option value="7">Mavic Platinum</option>
-								<option value="8">Phantom 1</option>
-								<option value="9">Phantom FC40</option>
-								<option value="10">Phantom 2</option>
-								<option value="11">Phantom 2 Vision</option>
-								<option value="12">Phantom 2 Vision+</option>
-								<option value="13">Phantom 3 Advanced</option>
-								<option value="14">Phantom 3 Professional</option>
-								<option value="15">Phantom 3 SE</option>
-								<option value="16">Phantom 3 Standard</option>
-								<option value="17">Phantom 4</option>
-								<option value="18">Phantom 4 Advanced</option>
-								<option value="19">Phantom 4 Pro</option>
-							</select>
-						</div>
-						<section>
-				  </form>
-	      </div>
-	      <div class="modal-footer">
-	        <button type="button" class="au-btn au-btn--secondary" data-dismiss="modal">Close</button>
-	        <button type="button" class="au-btn" data-dismiss="modal" id="save-button">Save</button>
-	      </div>
-	    </div>
-	  </div>
-	</div>-->
-	<!-- End add pilot -->
 
 	<!-- Delete -->
 <div class="modal fade" id="deletePilot" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -338,7 +161,26 @@
     </div>
   </div>
 </div>
-
+<!-- Delete -->
+<div class="modal fade" id="deletePilot-ava" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal-dialog modal-dialog-centered" role="document">
+	<div class="modal-content">
+		<div class="modal-header">
+			<h5 class="modal-title" id="exampleModalLongTitle">Delete</h5>
+			<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+		<div class="modal-body">
+			Are you sure you want to delete Ava Williams?
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="au-btn au-btn--secondary" data-dismiss="modal">No</button>
+			<button type="button" class="au-btn" data-dismiss="modal" id="delete-yes-ava">Yes</button>
+		</div>
+	</div>
+</div>
+</div>
 
 
 </main>
@@ -353,84 +195,98 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>
 
 <script>
-	$('#arn-check, #save, #warning, #error, .edit-student, .student-details').hide();
+	$('#arn-check, #save, #warning, #error, .edit-student, .student-details, #finalise-error').hide();
 	//var arn = document.getElementById("arn-input").value;
 	//var surname = document.getElementById("surname-input").value;
-	timesClicked = 0;
+
+
 	$('#addPilot').click(function(){
+		//timesClicked = 0;
+		var val1 = $("#surname-input").val();
+		var val2 = $("#arn-input").val();
 
-		timesClicked++;
-		$('#error').show();
-		$("#arn-input, #surname-input").addClass('form-error');
-		document.getElementById("arn-error").textContent="The ARN does not match the Student's detail";
-		document.getElementById("surname-error").textContent="Please check the surname and try again";
-		if(timesClicked>1){
-			$( "#arn-input" ).removeClass('form-error');
-			$( "#surname-input" ).removeClass('form-error');
-			//alert(surname);
-			$('#error, #arn-error,#surname-error').hide();
-			$('#save, .student-details').show();
-			$('.grid li:nth-child(2n)').removeClass('hidden');
-			$('#none').addClass('hidden');
-		}
-		if(timesClicked>2){
-			//alert(surname);
-			$('#save').show();
-			$('.grid li:nth-child(3n)').removeClass('hidden');
-		}
-	/*	else {
+		//alert(val1);
+		if(val1 == "" || val2 == ""){
+		//alert (timesClicked);
 			$('#error').show();
-		}*/
+			$('#save, #finalise-error').hide();
 
-
-	});
-	/*$('#delete-yes').click(function(){
-		if(){
-			$('.grid li:nth-child(2n)').addClass('hidden');
+			document.getElementById("arn-error").textContent="The ARN does not match the Student's detail";
+			document.getElementById("surname-error").textContent="Please check the surname and try again";
+			$("#arn-input, #surname-input").addClass('form-error');
+			$("#arn-error, #surname-error").show();
+			//timesClicked++;
 		}
-	});*/
+		else {
+			var classPeter = $("#peter").hasClass("hidden");
+			var classAva = $("#ava").hasClass("hidden");
+			if(classPeter){
+				$( "#arn-input" ).removeClass('form-error');
+				$( "#surname-input" ).removeClass('form-error');
+				$("#arn-input").val("");
+				$("#surname-input").val("");
+				//alert(surname);
+				$('#error, #arn-error,#surname-error, #finalise-error').hide();
+				$('#save, .student-details').show();
+				$('.grid, #peter').removeClass('hidden');
 
-
-
-
-
-	$('.btn-edit').click(function(){
-		$('.edit-student').show();
-		//document.getElementByClassName('.btn-edit').textContent="Close";
-		$('.edit, .delete, #save, .student').hide();
+				//timesClicked++;
+			}
+			else if(!classPeter && classAva){
+				//alert(surname);
+				$("#arn-input").val("");
+				$("#surname-input").val("");
+				$('#error, #arn-error, #surname-error, #finalise-error').hide();
+				$( "#arn-input" ).removeClass('form-error');
+				$( "#surname-input" ).removeClass('form-error');
+				$('#save').show();
+				$('#ava').removeClass('hidden');
+				//timesClicked = 0;
+			}
+	}
 	});
-	$('.btn-canel-student, .btn-save-student').click(function(){
-		$('.edit-student').hide();
-		//document.getElementByClassName('.btn-edit').textContent="Close";
-		$('.edit, .delete, .student').show();
+	$('#finalise').click(function(){
+		var classPeter = $("#peter").hasClass("hidden");
+		var classAva = $("#ava").hasClass("hidden");
+
+		if (classPeter && classAva){
+				$('#finalise-error').show();
+				$('#error, #arn-error, #surname-error, #save').hide();
+				return false;
+		}
+		else{
+				$('#finalise-error').hide();
+				return true;
+		}
 	});
-	$('.btn-save-student').click(function(){ $('#save, .student').show();});
-	/*$( "#arn-input" ).focusout(function() {
-    $( "#arn-input" ).css( "border","4px solid #d82c52" );
-		document.getElementById("arn-error").textContent="The ARN does not match the Pilots details";
-  });*/
-	//var type = window.location.hash.substr(1);
-	//alert (type);
-/*	$('#save-button').click(function(){
-		//location.reload();
-		$('#save').show();
-		$('.grid li').removeClass('hidden');
-		$('#none').addClass('hidden');
-	});*/
+	$('#delete-yes').click(function(){
+		if($('#peter').hasClass('hidden')){
+			$('#peter').removeClass('hidden');
+		}
+		else {
+				$('#peter').addClass('hidden');
+				$('#save').hide();
+		}
+		if ($('#ava').hasClass('hidden') && $('#peter').hasClass('hidden')){
+			$('.grid').addClass("hidden");
+		}
+	});
+
+	$('#delete-yes-ava').click(function(){
+		if($('#ava').hasClass('hidden')){
+			$('#ava').removeClass('hidden');
+		}
+		else {
+				$('#ava').addClass('hidden');
+				$('#save').hide();
+		}
+		if ($('#ava').hasClass('hidden') && $('#peter').hasClass('hidden')){
+			$('.grid').addClass("hidden");
+		}
+	});
 
 
-	//if (type=='save'){
-		//$(window).scrollTop(0);
-	//	$("html, body").animate({ scrollTop: 0 }, "slow");
-	//}
-	/* Name on other lines */
-	/*$('#details').hide();
-	$('#alt-remote').change(function(){
-	        if(this.checked)
-	            $('#details').fadeIn('slow');
-	        else
-	            $('#details').fadeOut('slow');
-	 });*/
+
 </script>
 </body>
 </html>
